# SAXSFormer

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: saxs_dataset.npz  saxs_dataset_prepared.npz
src/: compare_npz.py  data_acquisition.py  data_prepare.py  data_preprocessing.py  data_visualization.py  saxsformer_train.ipynb  view_dataset.py
