[project]
name = "SAXSFormer"
version = "0.1.0"
description = "A deep learning pipeline to predict 3D protein structural properties from 1D Small-Angle X-ray Scattering (SAXS) profiles."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Abhinay Shrestha", email = "abhinay.shrestha@usm.edu" }
]
dependencies = [
    "bio>=1.8.1",
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pypdb>=2.5",
    "rcsbsearchapi>=2.0.1",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "watchfiles>=1.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
get-pdb = "src.data_acquisition:main"
view-dataset = "src.view_dataset:main"
data-vis = "src.data_visualization:main"
data-prepare = "src.data_prepare:cli_main"
data-compare = "src.compare_npz:main"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
